[FINISH]: Agregamos CSS

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Inicia link a google fonts (Roboto Serif) -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Sirin+Stencil&display=swap" rel="stylesheet"> <!-- Link 2 a Google Fonts (Sirin Stencil) -->
   <link rel="stylesheet" href="./css/style.css"> <!-- Link a CSS -->
 </head>
 <body>
@@ -15,7 +16,7 @@
     <span class="logo">Fashion</span>
     <div class="sm-product">
       <h1 class="product-index">01</h1>
-      <div class="sm-product-img-conatiner">
+      <div class="sm-product-img-container">
         <img src="./img/img1.jpg" class= "sm-product-img" alt="">
       </div>
       <p class="sm-product-des">
@@ -28,7 +29,7 @@
     </div>
   </div>
   <div class="right-side"> <!-- Contenedor derecho -->
-    <img src="./img/img1.jpg" class="backdop-img" alt="">
+    <img src="./img/img1.jpg" class="backdrop-img" alt="">
     <div class="content">
       <div class="product-detail">
         <h1 class="product-name">Yellow Tracksuit</h1>
